<resources>
    <string name="app_name">LoginAndRegistrationScreen</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="not_registered">Not Registered</string>
    <string name="register">REGISTER</string>
    <string name="imie">Imię</string>
    <string name="nazwisko">Nazwisko</string>
    <string name="numer_telefonu">Numer telefonu</string>
    <string name="confirm_numer_telefonu">Confirm Numer Telefonu</string>
    <string name="already_registered">Already Registered?</string>
    <string name="login">Login</string>
</resources>